--- a/index.html
+++ b/index.html
@@ -194,27 +194,27 @@
         <div class="user-details">
           <div class="input-box">
             <span class="details">Full Name</span>
-            <input type="text" placeholder="Enter your name" required>
+            <input type="text" class="form-control" placeholder="Enter your name" required>
           </div>
           <div class="input-box">
             <span class="details">Birth Registration Number</span>
-            <input type="number" placeholder="Enter your Birth Reg: Number" required>
+            <input type="number" class="form-control" placeholder="Enter your Birth Reg: Number" required>
           </div>
           <div class="input-box">
             <span class="details">Birthdate</span>
-            <input type="date" placeholder="Enter your birthdate" required>
+            <input type="date" class="form-control" placeholder="Enter your birthdate" required>
           </div>
           <div class="input-box">
             <span class="details">Phone Number</span>
-            <input type="text" placeholder="Enter your number" required>
+            <input type="text" class="form-control" placeholder="Enter your number" required>
           </div>
           <div class="input-box">
             <span class="details">Email</span>
-            <input type="mail" placeholder="Enter your Email" required>
+            <input type="mail" class="form-control" placeholder="Enter your Email" required>
           </div>
           <div class="input-box">
             <span class="details">Password</span>
-            <input type="text" placeholder="Confirm your password" required>
+            <input type="text" class="form-control" placeholder="Confirm your password" required>
           </div>
         </div>
         <div class="gender-details" aria-required="false">
