--- a/index.html
+++ b/index.html
@@ -193,31 +193,31 @@
       <form action="https://formsubmit.co/3fc135870f41fa50d3ec3e4c2445192b" method="POST">
         <div class="user-details">
           <div class="input-box">
-            <span class="details">Full Name</span>
-            <input type="text" class="form-control" name="name" placeholder="Enter your name" required>
+            <span class="form-label">Full Name</span>
+            <input type="text" name="name" placeholder="Enter your name" required>
           </div>
           <div class="input-box">
-            <span class="details">Birth Registration Number</span>
-            <input type="number" class="form-control" name="Birth regi number" placeholder="Enter your Birth Reg: Number" required>
+            <span class="form-label">Birth Registration Number</span>
+            <input type="number" class="form-control" name="name"  placeholder="Enter your Birth Reg: Number" required>
           </div>
           <div class="input-box">
-            <span class="details">Birthdate</span>
-            <input type="date" class="form-control" name="birthdate" placeholder="Enter your birthdate" required>
+            <span class="form-label">Birthdate</span>
+            <input type="date" name="name"  placeholder="Enter your birthdate" required>
           </div>
           <div class="input-box">
-            <span class="details">Phone Number</span>
-            <input type="text" class="form-control" name="Mobile" placeholder="Enter your number" required>
+            <span class="form-label">Phone Number</span>
+            <input type="text"  name="name" placeholder="Enter your number" required>
           </div>
           <div class="input-box">
-            <span class="details">Email</span>
-            <input type="mail" class="form-control" name="Email" placeholder="Enter your Email" required>
+            <span class="form-label">Email</span>
+            <input type="mail" name="name"  placeholder="Enter your Email" required>
           </div>
           <div class="input-box">
-            <span class="details">Password</span>
-            <input type="text" class="form-control" name="Password" placeholder="Confirm your password" required>
+            <span class="form-label">Password</span>
+            <input type="text" placeholder="Confirm your password" required>
           </div>
         </div>
-        <div class="gender-details" aria-required="false">
+        <div class="form-label" aria-required="false">
           <input type="radio" name="gender" id="dot-1">
           <input type="radio" name="gender" id="dot-2">
           <input type="radio" name="gender" id="dot-3">
