--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
    </head>
 <body>
   <div class="container">
-    <div class="title">Registration to become a member</div>
+    <div class="title">WHITE DEVIL CYBER WARRIORS</div>
     <div class="content">
       <form action="#">
         <div class="user-details">
