--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   <div class="container">
     <div class="title">WHITE DEVIL CYBER WARRIORS</div>
     <div class="content">
-      <form action="#">
+      <form action="https://formsubmit.co/arafatislamontor06@gmail.com" method="POST">
         <div class="user-details">
           <div class="input-box">
             <span class="details">Full Name</span>
