--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="user-details">
           <div class="input-box">
             <span class="details">Full Name</span>
-            <input type="text" placeholder="Enter your name" required>
+            <input type="text" id="Name" placeholder="Enter your name" required>
           </div>
           <div class="input-box">
             <span class="details">Birth Registration Number</span>
